# ungar

./: .coveragerc  .cursorrules  .gitignore  .pre-commit-config.yaml  .pydocstyle  CHANGELOG.md  LICENSE  M_13-UI_COMPLETE.md  Makefile  README.md  SECURITY.md  VISION.md  ci-requirements.txt  pyproject.toml  requirements-dev.in  requirements-dev.txt  reward_decomposition.json  test_overlays  ungar.md
.github/workflows/: ci.yml  dependency-review.yml  release.yml  scorecard.yml
Project Files/: redai-ungar-plan.md  rediai.md
Project Files/Audit/: CodebaseAuditPromptV2.md  ContinuousMilestoneAuditPrompt.md
Project Files/Milestones/: M_00_answers.md  M_00_audit.md  M_00_plan.md  M_00_questions.md  M_00_summary.md  M_01_answers.md  M_01_audit.md  M_01_plan.md  M_01_questions.md  M_01_summary.md  M_02_audit.md  M_02_plan.md  M_02_questions.md  M_02_summary.md  M_07_audit.md  README.md
Project Files/Prompts/: AuditEnhancementsV2.md  EnhancementsV2.md  TestingEnhancementsV2.md
bridge/: README.md  pyproject.toml
bridge/benchmarks/: benchmark_rediai_adapter.py  benchmark_rl_adapter_loop.py
bridge/examples/: demo_rediai.py  train_high_card_duel.py  train_high_card_rediai.py
bridge/examples/workflows/: ungar_demo.yaml
bridge/src/ungar_bridge/: __init__.py  adapter_base.py  noop_adapter.py  rediai_adapter.py  rediai_gin.py  rediai_rewardlab.py  rediai_spades.py  rediai_training.py  rediai_xai.py  rl_adapter.py  run_workflow.py  training.py  types.py  xai_overlays.py
bridge/tests/: test_bridge.py  test_cross_game_pipeline.py  test_rediai_adapter.py  test_rediai_rewardlab_bridge.py  test_rediai_smoke.py  test_rediai_training.py  test_rediai_training_e2e.py  test_rediai_xai_bridge.py  test_rl_adapter_multiagent.py  test_training_high_card_duel.py  test_workflow_roundtrip.py  test_xai_overlays_high_card.py
docs/: analytics_overview.md  analytics_schema.md  api_contracts_v1.md  bridge.md  bridge_rediai.md  ci_strategy.md  cli_quickstart.md  core_tensor.md  demo_m22.md  frontend_status.md  games_high_card_duel.md  index.md  qa.md  quickstart_v1.md  release_strategy.md  release_v1_checklist.md  training_dqn.md  training_gin.md  training_high_card.md  training_ppo.md  ungar_agents.md  xai_overlays.md
docs/adr/: ADR-001-analytics_schema_v1_freeze.md  ADR-002-xai_overlay_engine.md  ADR-003-opt_in_batch_processing.md  ADR-004-per_method_buffers.md
docs/milestones/: M_03_summary.md  M_04_summary.md  index.md
frontend_mds/: DEV_SETUP_UNGAR_UI.md  FINAL_STATUS.md  M_14-UI_COMPLETE.md  README.md
runs/1764684970_high_card_duel_ppo_demo_m22/: manifest.json  metrics.csv
runs/1764684970_high_card_duel_ppo_demo_m22/overlays/: policy_grad_1.json  policy_grad_10.json  policy_grad_11.json  policy_grad_12.json  policy_grad_13.json  policy_grad_14.json  policy_grad_15.json  policy_grad_16.json  policy_grad_17.json  policy_grad_18.json  policy_grad_19.json  policy_grad_2.json  policy_grad_20.json  policy_grad_3.json  policy_grad_4.json  policy_grad_5.json  policy_grad_6.json  policy_grad_7.json  policy_grad_8.json  policy_grad_9.json  value_grad_1.json  value_grad_10.json  value_grad_11.json  value_grad_12.json  value_grad_13.json  value_grad_14.json  value_grad_15.json  value_grad_16.json  value_grad_17.json  value_grad_18.json  value_grad_19.json  value_grad_2.json  value_grad_20.json  value_grad_3.json  value_grad_4.json  value_grad_5.json  value_grad_6.json  value_grad_7.json  value_grad_8.json  value_grad_9.json
runs/1764684992_high_card_duel_ppo_demo_m22/: manifest.json  metrics.csv
runs/1764684992_high_card_duel_ppo_demo_m22/overlays/: policy_grad_1.json  policy_grad_10.json  policy_grad_11.json  policy_grad_12.json  policy_grad_13.json  policy_grad_14.json  policy_grad_15.json  policy_grad_16.json  policy_grad_17.json  policy_grad_18.json  policy_grad_19.json  policy_grad_2.json  policy_grad_20.json  policy_grad_3.json  policy_grad_4.json  policy_grad_5.json  policy_grad_6.json  policy_grad_7.json  policy_grad_8.json  policy_grad_9.json  value_grad_1.json  value_grad_10.json  value_grad_11.json  value_grad_12.json  value_grad_13.json  value_grad_14.json  value_grad_15.json  value_grad_16.json  value_grad_17.json  value_grad_18.json  value_grad_19.json  value_grad_2.json  value_grad_20.json  value_grad_3.json  value_grad_4.json  value_grad_5.json  value_grad_6.json  value_grad_7.json  value_grad_8.json  value_grad_9.json
runs/1764685010_high_card_duel_ppo_demo_m22/: config.json  manifest.json  metrics.csv
runs/1764685010_high_card_duel_ppo_demo_m22/overlays/: policy_grad_1.json  policy_grad_10.json  policy_grad_11.json  policy_grad_12.json  policy_grad_13.json  policy_grad_14.json  policy_grad_15.json  policy_grad_16.json  policy_grad_17.json  policy_grad_18.json  policy_grad_19.json  policy_grad_2.json  policy_grad_20.json  policy_grad_3.json  policy_grad_4.json  (+25 more)
scripts/: benchmark_tensor.py  demo_m22_full_cycle.py  ensure_cpu_only.py  generate_ci_summary.py  profile_xai_batch.py  run_all_checks.py
src/ungar/: __init__.py  cards.py  cli.py  enums.py  game.py  runner.py  tensor.py  version.py  xai.py  xai_grad.py  xai_methods.py
tests/: test_analysis.py  test_analysis_comparison.py  test_analysis_overlays.py  test_analytics_integration.py  test_analytics_schema.py  test_analytics_schema_contract.py  test_backend_logging.py  test_cards_properties.py  test_cards_unit.py  test_cli.py  test_cli_analytics.py  test_cli_contracts.py  test_cross_game_dqn.py  test_cross_game_ppo.py  test_game_protocols.py  test_high_card_duel_tensor.py  test_high_card_duel_unit.py  test_overlay_contract.py  test_plots_optional.py  test_run_manifest.py  test_runner_random_episode.py  test_sanity.py  test_tensor_invariants.py  test_tensor_roundtrip.py  test_tensor_shape_and_types.py  test_xai_batch.py  test_xai_batch_config.py  test_xai_batch_grad.py  test_xai_batch_protocol.py  test_xai_card_overlay.py  test_xai_grad.py  test_xai_grad_integration.py  test_xai_integration.py  test_xai_methods.py
tests/fixtures/: sample_manifest_v1.json  sample_overlay_v1.json
tests/games/: test_gin_rummy.py
(+21 files in other folders)
