[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ungar"
version = "0.0.0"
description = "Universal Neural Grid for Analysis and Research (UNGAR)"
authors = [{ name = "Michael Cahill" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "numpy>=1.26,<3.0",
    "torch>=2.0.0",
]

[project.scripts]
ungar = "ungar.cli:main"

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "coverage",
    "pydocstyle",
    "hypothesis",
    "bandit",
    "pip-audit",
    "cyclonedx-bom",
]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.ruff.lint]
extend-select = ["I"]  # import sorting
# keep defaults; we can refine ignores later

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
# exclude = ["bridge/"]  <-- Removed per M06 Phase A3 to allow unified checking
exclude = ["bridge/examples/"]

[[tool.mypy.overrides]]
module = "RediAI.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ungar_bridge.*"
ignore_missing_imports = true
follow_imports = "skip"
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings --cov=src/ungar --cov=bridge/src/ungar_bridge --cov-report=xml"
testpaths = ["tests", "bridge/tests"]
