[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ungar-bridge"
version = "0.0.0"
description = "Bridge adapters for UNGAR core games"
authors = [{ name = "Michael Cahill" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "ungar",
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "coverage",
]
rediai = [
    "rediai>=2.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.ruff.lint]
extend-select = ["I"]  # import sorting

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings"
testpaths = ["tests"]
